# quantpivot-knn-engine

./: .gitignore  README.md  clean  dataset_2000x256_32.ds2  dataset_2000x256_64.ds2  query_2000x256_32.ds2  query_2000x256_64.ds2  results_dst_2000x8_k8_x64_32.ds2  results_dst_2000x8_k8_x64_64.ds2  results_ids_2000x8_k8_x64_64.ds2  test.py
ProgettoGruppo11/: README.md  pyproject.toml  setup.py
ProgettoGruppo11/gruppo11.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ProgettoGruppo11/gruppo11/quantpivot64omp/: __init__.py
ProgettoGruppo11/src/32/: MakeFile  Makefile  common.h  main.c  main32  main_modified.c  out_distnn.ds2  output_32bit.txt  quantpivot32  quantpivot32.c  quantpivot32.nasm  quantpivot32_py.c  quantpivot32test.nasm  run  sseutils32.nasm  test_asm  test_asm.c
ProgettoGruppo11/src/64/: Makefile  common.h  main.c  main64  output.txt  output_2.txt  output_final_C.txt  output_final_assembly.txt  quantpivot64.c  quantpivot64.nasm  quantpivot64_py.c  run
ProgettoGruppo11/src/64omp/: Makefile  common.h  main  main.c  main64omp  out_distnn.ds2  out_idnn.ds2  quantpivot  quantpivot64.nasm  quantpivot64omp.c  quantpivot64omp_py.c  run
