[build-system]
requires = ["setuptools", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = 'gruppo11'
version = "1.0"
authors = [
    {name = "Andrea Attadia", email = "andreaattadia15@gmail.com"},
]
description = "Quantized Index for K-NN search"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = ["numpy"]
